BUG: SlicerQT - Attempt to fix test qVTKCommandOptionsTest{4,5} on windows
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12062 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qVTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qVTKWidgets/Testing/CMakeLists.txt
@@ -65,10 +65,20 @@ SET(arg2 " cmake is ")
 SET(arg3 "super awesome !")
 SET(arg4 "CMake rocks !")
 
+IF(WIN32)
+ADD_TEST( qVTKCommandOptionsTest4 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
+          qVTKCommandOptionsTest1 --my-list-of-strings "${arg1}" "${arg2}" "${arg3}"
+          -ms="${arg4}" --test-if-commandline-overwrite-settings )
+
+ADD_TEST( qVTKCommandOptionsTest5 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
+          qVTKCommandOptionsTest1 -mlos "${arg1}" "${arg2}" "${arg3}"
+          --my-string="${arg4}" --test-if-commandline-overwrite-settings )
+ELSE()
 ADD_TEST( qVTKCommandOptionsTest4 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
           qVTKCommandOptionsTest1 --my-list-of-strings ${arg1} ${arg2} ${arg3}
-          -ms=${arg4} --test-if-commandline-overwrite-liststring-settings )
+          -ms=${arg4} --test-if-commandline-overwrite-settings )
 
 ADD_TEST( qVTKCommandOptionsTest5 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
           qVTKCommandOptionsTest1 -mlos ${arg1} ${arg2} ${arg3}
-          --my-string=${arg4} --test-if-commandline-overwrite-liststring-settings )
+          --my-string=${arg4} --test-if-commandline-overwrite-settings )
+ENDIF()
