ENH: SlicerQT - Added test exercising --ignore-rest flags of qVTKCommandOptions
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12064 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qVTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qVTKWidgets/Testing/CMakeLists.txt
@@ -82,3 +82,11 @@ ADD_TEST( qVTKCommandOptionsTest5 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
           qVTKCommandOptionsTest1 -mlos ${arg1} ${arg2} ${arg3}
           --my-string=${arg4} --test-if-commandline-overwrite-settings )
 ENDIF()
+
+ADD_TEST( qVTKCommandOptionsTest6 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
+          qVTKCommandOptionsTest1 --test-if-ignorerest-flag-works
+          --ignore-rest --nothing=foo extra1 /? )
+
+ADD_TEST( qVTKCommandOptionsTest7 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
+          qVTKCommandOptionsTest1 --test-if-ignorerest-flag-works
+          -- --nothing=foo extra1 /? )
