BUG: Fixed launcher error (non-QT Slicer doesn't start because missing QT paths) ENH: All launcher scripts are in procedures and errors are captured and properly reported (more robust to any script error) ENH: New launcher option (--no-error-popup) to not display errors in a popup (log only) ENH: Use --no-error-popup for EMSegment tests that are expected to fail (to not confuse the user with error popups) ENH: Added new slicer variable (::LAUNCHER_REPORT_VTK_ERRORS) to allow reporting of VTK errors as failed tests on the dashboard. By default it is turned off now. Set it to ON to capture more errors.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12069 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -394,6 +394,7 @@ if(NOT DISABLE_CXX_TESTING)
   add_test(
     EMSegCL_EFBogusParameterNode
     ${Slicer3_EXE} ${WRAPPED_EXE_PREFIX}/EMSegmentCommandLine
+    --no-error-popup
     --verbose --dontWriteResults --mrmlSceneFileName 
     ${EMSegment_TUTORIAL_DIR}/Template_small.mrml
     --parametersMRMLNodeName BogusNodeName  
@@ -408,6 +409,7 @@ if(NOT DISABLE_CXX_TESTING)
   add_test(
     EMSegCL_EFBogusMRMLScene
     ${Slicer3_EXE} ${WRAPPED_EXE_PREFIX}/EMSegmentCommandLine
+    --no-error-popup
     --verbose --dontWriteResults --mrmlSceneFileName /tmp/bogus_file_scene.mrml
     )
   set_tests_properties(
@@ -420,6 +422,7 @@ if(NOT DISABLE_CXX_TESTING)
   add_test(
     EMSegCL_EFBogusTargetImages
     ${Slicer3_EXE} ${WRAPPED_EXE_PREFIX}/EMSegmentCommandLine
+    --no-error-popup
     --verbose --dontWriteResults --mrmlSceneFileName 
     ${EMSegment_TUTORIAL_DIR}/Template_small.mrml
     --targetVolumeFileNames
@@ -435,6 +438,7 @@ if(NOT DISABLE_CXX_TESTING)
   add_test(
     EMSegCL_EFTooManyImages
     ${Slicer3_EXE} ${WRAPPED_EXE_PREFIX}/EMSegmentCommandLine
+    --no-error-popup
     --verbose --dontWriteResults --mrmlSceneFileName 
     ${EMSegment_TUTORIAL_DIR}/Template_small.mrml
     --targetVolumeFileNames
@@ -450,6 +454,7 @@ if(NOT DISABLE_CXX_TESTING)
   add_test(
     EMSegCL_EFTooFewImages
     ${Slicer3_EXE} ${WRAPPED_EXE_PREFIX}/EMSegmentCommandLine
+    --no-error-popup
     --verbose --dontWriteResults --mrmlSceneFileName 
     ${EMSegment_TUTORIAL_DIR}/Template_small.mrml
     --targetVolumeFileNames
@@ -465,6 +470,7 @@ if(NOT DISABLE_CXX_TESTING)
   add_test(
     EMSegCL_EFBogusResultStandardImage
     ${Slicer3_EXE} ${WRAPPED_EXE_PREFIX}/EMSegmentCommandLine
+    --no-error-popup
     --verbose --dontWriteResults --mrmlSceneFileName 
     ${EMSegment_TUTORIAL_DIR}/Template_small.mrml
     --resultStandardVolumeFileName
