ENH: SlicerQT - in qCTKTestApplication, added macro QCTK_DECLARE_TEST, QCTK_RUN_TEST and QCTK_EXIT_TEST
In case test required an active QT loop, it's now easy to implement them
using the following syntax:

where the name of the test is: qCTKAddRemoveComboBoxTest1


// qCTK includes
#include "OBJECT_TO_TEST.h"
#include "qCTKTestApplication.h"

// STL includes
#include <stdlib.h>
#include <iostream>

QCTK_DECLARE_TEST(qCTKAddRemoveComboBoxTest1)
{
  qCTKAddRemoveComboBox qctkObject;
  int currentCount = qctkObject.count();
  if (currentCount != 0)
    {
    qctkObject.printAdditionalInfo();
    std::cerr << "Error in count() - Expected: 0, current:" << currentCount << std::endl;
    QCTK_EXIT_TEST(EXIT_FAILURE);
    }

  // more tests ...

  QCTK_EXIT_TEST(EXIT_SUCCESS);
}

QCTK_RUN_TEST(qCTKAddRemoveComboBoxTest1);

git-svn-id: http://svn.slicer.org/Slicer3/trunk@12071 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -83,6 +83,7 @@ SET(qCTKWidgets_MOC_SRCS
   qCTKNumericInput.h
   qCTKSettings.h
   qCTKSliderSpinBoxWidget.h
+  qCTKTestApplication.h
   qCTKTitleComboBox.h
   qCTKTreeComboBox.h
   )
