BUG: Fixed the script so that now it can tolerate if LAUNCHER_REPORT_VTK_ERRORS CMake variable is not set (happens most probably if slicer variables file is not updated)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12075 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -404,7 +404,7 @@ proc launch_SetEnvironment {} {
     # If reportVTKErrors is nonzero, then we check for VTK errors and
     # if a VTK error is found then launcher returns with error (causing the test to FAIL)
     set ::LAUNCH(reportVTKErrors) 0
-    if {@LAUNCHER_REPORT_VTK_ERRORS@=="ON"} {
+    if {"@LAUNCHER_REPORT_VTK_ERRORS@"=="ON"} {
       set ::LAUNCH(reportVTKErrors) 1
     }
 }
