--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -1074,4 +1074,5 @@ if { [catch launch_ImportModulePaths res] } {
 # run program until it exits and then exit this script with the ouput
 if { [catch launch_RunProgram res] } {
   ShowAndLogError "launch_RunProgram failed: $res"
+  exit -3
 }
