BUG: Update launch.tcl.in to update properly QT_PLUGIN_PATH with ConfigurationType (Debug, Release, ..) when required.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12082 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -277,6 +277,7 @@ proc launch_SetEnvironment {} {
       set ::Teem_BUILD_SUBDIR  ""
       set ::OpenIGTLink_BUILD_SUBDIR  ""
       set ::BatchMake_BUILD_SUBDIR  ""
+      set ::QtDesignerPlugins_BUILD_SUBDIR  ""
     
       if {$::env(BUILD) == $::WINDOWS} {
         foreach buildType {"." Debug RelWithDebInfo Release MinSizeRel} {
@@ -303,6 +304,11 @@ proc launch_SetEnvironment {} {
           }
           if { [file exists "@BatchMake_DIR@/bin/$buildType/BatchMake.dll"] } {
             set ::BatchMake_BUILD_SUBDIR $buildType
+          }
+          if { "@Slicer3_QT_PLUGIN_PATH@" != "" } {
+            if { [file exists "@Slicer3_QT_PLUGIN_PATH@/designer/$buildType/qCTKWidgetsPlugin.dll"] } {
+              set ::QtDesignerPlugins_BUILD_SUBDIR $buildType
+            }
           }
         }
       } else {
@@ -400,7 +406,7 @@ proc launch_SetEnvironment {} {
     
     
       # QtDesigner variable  
-      StoreDirInEnvVar Slicer3_QT_PLUGIN_PATH "@Slicer3_QT_PLUGIN_PATH@"
+      StoreDirInEnvVar Slicer3_QT_PLUGIN_PATH "@Slicer3_QT_PLUGIN_PATH@/$::QtDesignerPlugins_BUILD_SUBDIR"
       
     }
     
