BUG: In launch.tcl.in, condition to set QtDesignerPlugins_BUILD_SUBDIR was incorrect
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12083 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/launch.tcl.in
+++ b/launch.tcl.in
@@ -306,7 +306,7 @@ proc launch_SetEnvironment {} {
             set ::BatchMake_BUILD_SUBDIR $buildType
           }
           if { "@Slicer3_QT_PLUGIN_PATH@" != "" } {
-            if { [file exists "@Slicer3_QT_PLUGIN_PATH@/designer/$buildType/qCTKWidgetsPlugin.dll"] } {
+            if { [file exists "@Slicer3_QT_PLUGIN_PATH@/$buildType/designer/qCTKWidgetsPlugin.dll"] } {
               set ::QtDesignerPlugins_BUILD_SUBDIR $buildType
             }
           }
