ENH: SlicerQt - add test for qVTKObject,
git-svn-id: http://svn.slicer.org/Slicer3/trunk@12090 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qVTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qVTKWidgets/Testing/CMakeLists.txt
@@ -25,26 +25,35 @@ INCLUDE_DIRECTORIES(
 
 CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   qVTKCommandOptionsTest1.cxx
+  qVTKObjectTest1.cxx
   )
+
+SET(qVTKWidgetsTest_SRCS
+  qVTKObjectTest.cxx
+  )
+
+SET(qVTKWidgetsTest_MOC_SRCS
+  qVTKObjectTest.h
+  )
+
+QT4_WRAP_CPP(qVTKWidgetsTest_SRCS ${qVTKWidgetsTest_MOC_SRCS})
 
 SET (TestsToRun ${Tests})
 REMOVE (TestsToRun ${KIT}CxxTests.cxx)
 
 SET(LIBRARY_NAME ${PROJECT_NAME})
 
-ADD_EXECUTABLE(${KIT}CxxTests ${Tests})
+ADD_EXECUTABLE(${KIT}CxxTests ${Tests} ${qVTKWidgetsTest_SRCS})
 TARGET_LINK_LIBRARIES(${KIT}CxxTests ${LIBRARY_NAME})
 
 SET( qVTKWidgets_TESTS ${CXX_TEST_PATH}/${KIT}CxxTests)
-
 IF(WIN32)
   SET(qVTKWidgets_TESTS ${CXX_TEST_PATH}/${CMAKE_BUILD_TYPE}/${KIT}CxxTests)
 ENDIF(WIN32)
 
-
-# MACRO( SIMPLE_TEST  TESTNAME )
-#   ADD_TEST( ${TESTNAME} ${LAUNCH_EXE} ${qVTKWidgets_TESTS} ${TESTNAME} )
-# ENDMACRO( SIMPLE_TEST  )
+MACRO( SIMPLE_TEST  TESTNAME )
+  ADD_TEST( ${TESTNAME} ${LAUNCH_EXE} ${qVTKWidgets_TESTS} ${TESTNAME} )
+ENDMACRO( SIMPLE_TEST  )
 
 #SIMPLE_TEST( qVTKCommandOptionsTest1 )
 
@@ -90,3 +99,6 @@ ADD_TEST( qVTKCommandOptionsTest6 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
 ADD_TEST( qVTKCommandOptionsTest7 ${LAUNCH_EXE} ${qVTKWidgets_TESTS}
           qVTKCommandOptionsTest1 --test-if-ignorerest-flag-works
           -- --nothing=foo extra1 /? )
+
+# qVTKObjectTest1
+SIMPLE_TEST( qVTKObjectTest1 )
